# xyz

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  tui.py
.github/workflows/: ci.yml  publish.yml
docs/: xyz_prd.md
src/xyz/: __main__.py
src/xyz/ai/: __init__.py  cleanup.py  client.py  cve.py  explainer.py  orphan.py  prompts.py  search.py
src/xyz/managers/: __init__.py  _subprocess.py  base.py  brew.py  npm.py  pip.py  registry.py
src/xyz/tui/: app.py
tests/: conftest.py
tests/managers/: test_base.py  test_brew.py  test_npm.py  test_pip.py  test_registry.py
xyz/: __init__.py
xyz/ai/: __init__.py  client.py  explainer.py  orphan.py  prompts.py  search.py
