[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xyz-manager"
version = "0.1.0"
description = "Universal dependency manager TUI — one terminal, every package manager."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Minsu Kim", email = "kimminsu@oregonstate.edu" },
    { name = "Adithya Nair", email = "nairadi@oregonstate.edu" },
    { name = "Ryan Shankar", email = "shankary@oregonstate.edu" },
]
dependencies = [
    "textual>=3.0",
    "google-genai>=1.0",
    "mermaid-ascii>=0.7.0",
]

[project.scripts]
xyz = "xyz.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["xyz*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
test = ["pytest-asyncio"]
